--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,3 +28,7 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+    access_control:
+        - { path: ^/api/doc, roles: PUBLIC_ACCESS }
+        - { path: ^/api/user/register, roles: PUBLIC_ACCESS }
+        - { path: ^/api/,       roles: IS_AUTHENTICATED_FULLY }
